--- a/css/index.css
+++ b/css/index.css
@@ -18,24 +18,3 @@ nav {
     z-index: 9999 !important;
 }
 
-/* RESPONSIVE CSS
--------------------------------------------------- */
-@media (min-width: 10em) {
-
-}
-
-@media (min-width: 40em) {
-    .card-img {
-        visibility: hidden;
-        width: 250px;
-        height: 180px;
-    }
-}
-
-@media (min-width: 62em) {
-    .card-img {
-        visibility: visible;
-        width: 250px;
-        height: 180px;
-    }
-}
